--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-manifest": "^4.4.0",
     "gatsby-plugin-offline": "^5.4.0",
     "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sass": "^5.14.0",
     "gatsby-plugin-sharp": "^4.4.0",
     "gatsby-source-filesystem": "^4.4.0",
     "gatsby-transformer-sharp": "^4.4.0",
@@ -23,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-masonry-css": "^1.0.16",
+    "sass": "^1.51.0",
     "simplebar-react": "^2.3.6"
   },
   "devDependencies": {
