--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.1.0",
     "react-masonry-css": "^1.0.16",
     "sass": "^1.51.0",
     "simplebar-react": "^2.3.6"
