--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@fancyapps/ui": "^4.0.12",
     "@img-comparison-slider/react": "^7.3.2",
+    "axios": "^0.27.2",
     "gatsby": "^4.4.0",
     "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-gatsby-cloud": "^4.4.0",
